# ac-backend

./: .env-example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  app.db  conftest.py  main.py  pyproject.toml
alembic/: env.py
app/core/: exceptions.py  settings.py
app/dependencies/: __init__.py  auth.py  auth_client.py  db.py  get_settings.py  repository.py  user.py
app/endpoints/: __init__.py  admin.py  auth.py  field.py  healthcheck.py  home.py  login.py  squad.py  tag.py  user.py
app/models/: __init__.py  base.py  field.py  file.py  squad.py  tag.py  user.py  utils.py
app/repositories/: __init__.py  base.py  field.py  squad.py  tag.py  user.py
app/schemas/: __init__.py  auth.py  field.py  files.py  squad.py  tag.py  user.py
app/services/: __init__.py  auth.py  jwt.py  squad_service.py
features/: auth.feature  environment.py  field.feature  healthcheck.feature  squad.feature  user.feature
features/steps/: auth.py  common.py  field.py  squad.py
tests/: utils.py
tests/endpoints/: test_user.py
tests/factories/: __init__.py  field.py  squad.py  tag.py  user.py
