[tool.poetry]
name = "ac-backend"
version = "0.1.0"
description = ""
authors = ["Airsoft Club"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.12"
alembic = "^1.10.4"
fastapi-health = "^0.4.0"
itsdangerous = "^2.1.2"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
httpx = "^0.24.0"
urllib3 = "<2"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.22.0"
pre-commit = "^3.3.1"
ipdb = "^0.13.13"
ipython = "^8.13.1"
httpie = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
